--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "weather",
   "version": "1.0.0",
   "description": "Simple weather app",
-  "main": "src/js/weather.js",
+  "main": "src/js/WeatherApp.js",
   "jsnext:main": "dest/js/weather.min.js",
-  "scripts": {},
+  "scripts": {
+    "build": "webpack --config config/bundler.js && gulp"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/xmentor/weather.git"
@@ -20,13 +22,16 @@
   },
   "homepage": "https://github.com/xmentor/weather#readme",
   "devDependencies": {
+    "babel-core": "^6.25.0",
+    "babel-loader": "^7.1.1",
+    "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-preset-es2015": "^6.24.1",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
-    "gulp-closure-compiler": "^0.4.0",
     "gulp-copy": "^1.0.0",
     "gulp-cssmin": "^0.1.7",
     "gulp-sass": "^3.1.0",
     "gulp-string-replace": "^0.4.0",
-    "gulp-template": "^4.0.0"
+    "webpack": "^3.4.1"
   }
 }
